@@ -1,3 +1,11 @@
+2009-04-25  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	PR bootstrap/39739
+	* configure.ac (extra_mpfr_configure_flags): Set and AC_SUBST.
+	* Makefile.def (module=mpfr): Use extra_mpfr_configure_flags.
+
+	* configure, Makefile.in: Regenerate.
+
 2009-02-05  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.tpl (stage_last): Define $r and $s before using
